RESOLVED FIXED278934
[ macOS iOS wk2 ] imported/w3c/web-platform-tests/content-security-policy/inheritance/history.sub.html is a flaky failure.
https://bugs.webkit.org/show_bug.cgi?id=278934
Summary [ macOS iOS wk2 ] imported/w3c/web-platform-tests/content-security-policy/inh...
Anfernee Viduya
Reported 2024-08-30 11:24:09 PDT
imported/w3c/web-platform-tests/content-security-policy/inheritance/history.sub.html is a flaky failure for some time now. HISTORY: https://results.webkit.org/?suite=layout-tests&test=imported%2Fw3c%2Fweb-platform-tests%2Fcontent-security-policy%2Finheritance%2Fhistory.sub.html&platform=ios&platform=mac&architecture=x86_64&architecture=arm64&style=debug&style=release&flavor=wk2 DIFF: PASS History navigation: blob URL document is navigated back from history same-origin. PASS History navigation: blob URL document is navigated back from history cross-origin. PASS History navigation: blob URL document is navigated back from history (without bfcache on Firefox) same-origin. -PASS History navigation: blob URL document is navigated back from history (without bfcache on Firefox) cross-origin. +FAIL History navigation: blob URL document is navigated back from history (without bfcache on Firefox) cross-origin. step_wait_func: Wait for the popup to navigate. Timed out waiting on condition LINK: https://build.webkit.org/results/Apple-Sonoma-Release-WK2-Tests/282961@main%20(4366)/imported/w3c/web-platform-tests/content-security-policy/inheritance/history.sub-diff.txt REPRODUCIBILITY: I was able to reproduce on ToT using command: run-webkit-tests imported/w3c/web-platform-tests/content-security-policy/inheritance/history.sub.html --debug --iterations=100
Attachments
Radar WebKit Bug Importer
Comment 1 2024-08-30 11:24:22 PDT
EWS
Comment 2 2024-08-30 11:45:34 PDT
Test gardening commit 282983@main (3dbe872927b3): <https://commits.webkit.org/282983@main> Reviewed commits have been landed. Closing PR #32955 and removing active labels.
Bryan Medina
Comment 3 2025-08-28 11:02:46 PDT
It looks like this is now flakily impacting iOS Release, so I updated expectations to reflect that.
EWS
Comment 4 2025-08-28 11:03:16 PDT
Test gardening commit 299266@main (3651357a9023): <https://commits.webkit.org/299266@main> Reviewed commits have been landed. Closing PR #50012 and removing active labels.
roberto_rodriguez2
Comment 5 2026-03-31 15:46:12 PDT
EWS
Comment 6 2026-04-06 21:57:10 PDT
Committed 310686@main (73b6b4134347): <https://commits.webkit.org/310686@main> Reviewed commits have been landed. Closing PR #61799 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.