Fix blob URL history.back() failing when current document is cross-origin https://bugs.webkit.org/show_bug.cgi?id=278934 rdar://135029566

Reviewed by Matthew Finkel.

WebLoaderStrategy::scheduleLoad() passes the navigation requester's top origin
to the NetworkProcess for main-frame blob URL loads. During back-forward
navigations, the requester is the document being navigated away from. When
cross-origin with the blob, BlobRegistryImpl::blobDataFromURL() rejects the
request and the navigation never commits.

Skip the requester's top origin for back-forward blob URL navigations and
derive it from the blob URL itself via SecurityOrigin::create(). This is
correct because the main frame is the top frame, so the blob URL's origin
is the top origin.

* LayoutTests/platform/ios/TestExpectations:
* LayoutTests/platform/mac-wk2/TestExpectations:
* Source/WebKit/WebProcess/Network/WebLoaderStrategy.cpp:
(WebKit::WebLoaderStrategy::scheduleLoadFromNetworkProcess):

Canonical link: https://commits.webkit.org/310686@main